--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -78,11 +78,13 @@ td {
 .img-cont {
   max-height: 275px;
   min-height: 275px;
+  max-width: 200px;
 }
 
 .big-img img {
   /* width: 100%;
   height: 100%; */
+  max-width: 200px;
   max-height: 275px;
   display: block;
   object-fit: cover;
@@ -250,13 +252,14 @@ body {
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
-  /* -webkit-appearance: none; */
-  /* margin: 0; */
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-input[type=number] {
+/* input[type=number] {
+  appearance: textfield;
   -moz-appearance: textfield;
-}
+} */
 
 ::-webkit-calendar-picker-indicator {
   filter: invert(1);
