--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -3,9 +3,11 @@
     margin: 0;
     box-sizing: border-box;
 }
-.logo-img{
+
+.logo-img {
     width: 60px;
 }
+
 .card-subtitle {
     color: #7f8084;
     overflow: hidden;
@@ -28,7 +30,7 @@
 }
 
 .insta-icon:hover {
-    color: #e11d74 !important ;
+    color: #e11d74 !important;
     transition: all 0.3s;
     transition: .3s ease;
 }
@@ -40,8 +42,18 @@
 }
 
 .wp-icon:hover {
-    color:#25D366 !important;
+    color: #25D366 !important;
     transition: all 0.3s;
     transition: transform .6s;
     transition: .3s ease;
+}
+
+/* overly on card image */
+.mansoor{
+    transition: .5s ease;
+    background-color: #000;
+  
+}
+.position-relative:hover .mansoor {
+    opacity: 0.6;
 }
