--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -275,6 +275,7 @@ input[type=number]::-webkit-outer-spin-button {
   display: flex;
   height: 100%;
   width: 100%;
+  max-height: 200rem;
   min-height: 200px;
   cursor: pointer;
   border: 2px dashed #ccc;
