--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,7 +28,6 @@ header .nav-item.btn:active a {
         padding-left: 0.25rem;
     }
 }
-
 .offcanvas-center {
     top: 20%;
     bottom: initial;
@@ -55,6 +54,53 @@ header .nav-item.btn:active a {
     backdrop-filter: blur(3px);
 }
 /* Search Bar Styling */
+
+/* Book Card Styling Start */
+.shadow-disperse {
+    transition: 0.2s ease;
+    filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.5));
+}
+.shadow-disperse:hover {
+    filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.6));
+}
+/* Book Card Styling End */
+
+/* Single Product Page Styling */
+.product-images-container .product-label {
+    top: 15px;
+    right: 15px;
+    min-width: 55px;
+    min-height: 55px;
+}
+.product-image-wrap {
+    padding: 0 25%;
+}
+.nav-tabs .nav-link {
+    border-width: 3px;
+}
+.thumb {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    margin: 10px 0;
+}
+.thumb img {
+    cursor: pointer;
+    width: 60px;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    border: 1px solid var(--bs-gray);
+    margin-right: 5px;
+    opacity: 0.7;
+    border-radius: 5px;
+}
+
+.thumb span.active img {
+    opacity: 1;
+    border: 1px solid var(--bs-sea-green);
+}
+/* Single Product Page Styling */
 
 /* Footer Styling Start*/
 footer .social-links a {
