--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,14 @@
     align-items: center !important;
 }
 
+.divider:after,
+.divider:before {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #cccccc;
+}
+
 /* Header Styling Start */
 .navbar-top {
     --bs-navbar-color: var(--bs-light);
@@ -20,6 +28,14 @@ header .nav-item.btn:active a {
     color: var(--bs-amaranth-purple);
 }
 /* Header Styling End */
+
+/* Cart/Checkout Styling Start */
+@media (max-width: 992px) {
+    #cartContainer .cart-item-image-wrapper {
+        padding: 0 25%;
+    }
+}
+/* Cart/Checkout Styling ENd */
 
 /* Search Bar Styling */
 @media (max-width: 375px) {
@@ -95,12 +111,21 @@ header .nav-item.btn:active a {
     opacity: 0.7;
     border-radius: 5px;
 }
-
 .thumb span.active img {
     opacity: 1;
     border: 1px solid var(--bs-sea-green);
 }
 /* Single Product Page Styling */
+
+/* Add Book Styling Start */
+.drop_zone {
+    max-height: 200rem;
+    min-height: 200px;
+    cursor: pointer;
+    border: 2px dashed #ccc;
+    border-radius: 6px;
+}
+/* Add Book Styling End */
 
 /* Footer Styling Start*/
 footer .social-links a {
@@ -123,3 +148,34 @@ footer a:hover {
     color: var(--bs-sea-green);
 }
 /* Footer Styling End */
+
+/* Horizontal Timeline Styling Start */
+.progress-timeline li:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: var(--bs-gray);
+    position: absolute;
+    top: 17%;
+    z-index: -1;
+}
+.progress-timeline li:first-child:before {
+    left: 50%;
+}
+.progress-timeline li:last-child:before {
+    width: 50%;
+}
+.progress-timeline li.active:before {
+    background-color: var(--bs-amaranth-purple);
+}
+.stamp {
+    width: 15px;
+    height: 15px;
+}
+.progress-timeline li.active .stamp {
+    border-color: var(--bs-amaranth-purple) !important;
+    background-color: var(--bs-amaranth-purple) !important;
+    color: var(--bs-light) !important;
+}
+/* Horizontal Timeline Styling End */
